--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue-typed-js": "^0.1.2",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0"
+    "@nuxt/typescript-build": "^2.1.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^10.2.1"
   }
 }
